Fix image shift on hover

--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,7 @@ ul, li {
 .card:hover .card__link {
   font-weight: 400;
   border-bottom: 3px solid #fff;
+  margin-bottom: 0;
 }
 .card__category {
   font-weight: 200;
@@ -320,6 +321,7 @@ ul, li {
 .card__link {
   font-weight: 200;
   display: inline-block;
+  margin-bottom: 2px;
 }
 .card__icon-wrapper {
   display: none;
