--- a/styles/components/card.scss
+++ b/styles/components/card.scss
@@ -11,6 +11,7 @@
         .card__link {
             font-weight: 400;
             border-bottom: 3px solid #fff;
+            margin-bottom: 0;
         }
     }
 
@@ -48,6 +49,7 @@
     &__link {
         font-weight: 200;
         display: inline-block;
+        margin-bottom: 2px;
     }
 
     &__icon-wrapper {
